--- a/skin/frontend/codazon_fastest/default/css/styles.css
+++ b/skin/frontend/codazon_fastest/default/css/styles.css
@@ -26933,11 +26933,11 @@ table.cust-reviewss thead {display: none;}
 }
 
 @media only screen and (max-width: 480px) { 
-  .category-products .product-items .item  {width: 100%; height: auto!important; margin-bottom: 25px;}
+  .category-products .products-grid .product-items .item  {width: 100%; height: auto!important; margin-bottom: 25px;}
 .nested-container .page-banners .left {    width: 100%!important;  margin-bottom: 0px!important; margin-left: 0; margin-right: 0;}
 .nested-container .page-banners .right {    width: 100%!important;  margin-right: 0px!important;  margin-bottom: 0!important;}
 .nested-container .page-banners .left a {    display: block;  margin-bottom: 10px;}
-.nested-container .page-banners .right a {    display: block;  margin-bottom: 10px;}
+.nested-container .page-banners .right a {    display: block;  margin-bottom: 10px;} 
 
 
 }
