--- a/skin/frontend/codazon_fastest/default/css/styles.css
+++ b/skin/frontend/codazon_fastest/default/css/styles.css
@@ -26914,6 +26914,7 @@ table.cust-reviewss thead {display: none;}
 
 
 @media only screen and (max-width: 767px) {
+  .modal-body .row { margin-left: 0!important;  margin-right: 0!important;} 
 .cart .cart-collaterals .last {    width: 100%!important;  position: static;  float: right;} 
 .cart .cart-collaterals .first {    width: 100%!important;  float: left;  position: static;} 
 
