--- a/app/design/frontend/codazon_fastest/default/template/onestepcheckout/onepage/review/item.phtml
+++ b/app/design/frontend/codazon_fastest/default/template/onestepcheckout/onepage/review/item.phtml
@@ -1,6 +1,6 @@
 <?php $_item = $this->getItem()?>
 <tr>
-    <td><img src="<?php echo $this->getProductThumbnail()->resize(75); ?>" width="55" height="55" alt="<?php echo $this->htmlEscape($this->getProductName()) ?>" /></td> <!-- Product Image -->
+    <td><!-- <img src="<?php echo $this->getProductThumbnail()->resize(75); ?>" width="55" height="55" alt="<?php echo $this->htmlEscape($this->getProductName()) ?>" /> --></td> <!-- Product Image -->
     <td><h3 class="product-name"><?php echo $this->htmlEscape($this->getProductName()) ?></h3>   
           <?php if ($_options = $this->getOptionList()):?>
         <dl class="item-options">
