display payment cca

--- a/app/design/frontend/codazon_fastest/default/template/onestepcheckout/onepage/payment.phtml
+++ b/app/design/frontend/codazon_fastest/default/template/onestepcheckout/onepage/payment.phtml
@@ -1,6 +1,6 @@
 <div id="payment-method" class="onestepcheckout_block">
     <div class="op_block_title" id="payment"><?php echo $this->__('Payment Method') ?><sup>*</sup></div>
-    <div class="tool-tip" id="payment-tool-tip">
+    <div class="tool-tip" id="payment-tool-tip" style="display:none;">
         <div class="btn-close"><a href="#" id="payment-tool-tip-close" title="<?php echo $this->__('Close') ?>"><?php echo $this->__('Close') ?></a></div>
         <div class="tool-tip-content"><img src="<?php echo $this->getSkinUrl('images/cvv.gif') ?>" alt="<?php echo $this->__('Card Verification Number Visual Reference') ?>" title="<?php echo $this->__('Card Verification Number Visual Reference') ?>" /></div>
     </div>
