--- a/app/design/frontend/codazon_fastest/default/template/onestepcheckout/onepage/review/item.phtml
+++ b/app/design/frontend/codazon_fastest/default/template/onestepcheckout/onepage/review/item.phtml
@@ -1,6 +1,6 @@
 <?php $_item = $this->getItem()?>
 <tr>   
-    <td><h3 class="product-name"><?php echo $this->htmlEscape($this->getProductName()) ?></h3>   
+    <td colspan="2"><h3 class="product-name"><?php echo $this->htmlEscape($this->getProductName()) ?></h3>   
           <?php if ($_options = $this->getOptionList()):?>
         <dl class="item-options">
             <?php foreach ($_options as $_option) : ?>
