--- a/app/design/frontend/codazon_fastest/default/template/catalog/product/list.phtml
+++ b/app/design/frontend/codazon_fastest/default/template/catalog/product/list.phtml
@@ -204,6 +204,7 @@
                                         <p class="availability out-of-stock"><span><?php echo $this->__('Out of stock') ?></span></p>
                                     <?php endif; ?>
                                     <?php echo $_qsHelper->getQuickshopHtml($_product) ?>
+                                    <a href="<?php echo $this->helper('wishlist')->getAddUrl($_product) ?>" class="link-wishlist"><?php echo $this->__('Add to Wishlist') ?></a>
                                  
                                 </div>
                             </div>
