address the issue of mobile menu

--- a/app/design/frontend/codazon_fastest/default/template/page/html/mobile_top_menu.phtml
+++ b/app/design/frontend/codazon_fastest/default/template/page/html/mobile_top_menu.phtml
@@ -19,20 +19,23 @@ if(!isset($options['lv'])){
 }
 
 foreach ($children as $child) {
-    print_r($child->getData());exit;
-    $child->setLevel($childLevel);
-    $outermostClassCode = 'level-'. $options['lv'];
-    $_hasChildren = ($child->hasChildren()) ? 'parent' : '';
-    $html .= '<li class="menu-item '.$_hasChildren.' '.$outermostClassCode.'">';
-    $html .= '<a href="'. $this->getCategoryUrlById($child->getId()) .'" class="menu-link">'. $this->escapeHtml($this->__($child->getName())) .'</a>';
-    $nextChildLevel = $childLevel + 1;
-    if ($child->hasChildren()) {
-		$html .= '<a class="dropdown-toggle"><span class="caret">&nbsp;</span></a>';
-        $html .= '<ul class="'.$childrenWrapClass.'">';
-        $html .=     $this->render($child, $childrenWrapClass,false,'',$options);
-        $html .= '</ul>';
+    //print_r($child->getData());exit;
+    if($child->getIsActive==1){
+        $child->setLevel($childLevel);
+        $outermostClassCode = 'level-'. $options['lv'];
+        $_hasChildren = ($child->hasChildren()) ? 'parent' : '';
+        $html .= '<li class="menu-item '.$_hasChildren.' '.$outermostClassCode.'">';
+        $html .= '<a href="'. $this->getCategoryUrlById($child->getId()) .'" class="menu-link">'. $this->escapeHtml($this->__($child->getName())) .'</a>';
+        $nextChildLevel = $childLevel + 1;
+        if ($child->hasChildren()) {
+            $html .= '<a class="dropdown-toggle"><span class="caret">&nbsp;</span></a>';
+            $html .= '<ul class="'.$childrenWrapClass.'">';
+            $html .=     $this->render($child, $childrenWrapClass,false,'',$options);
+            $html .= '</ul>';
+        }
+        $html .= '</li>';
     }
-    $html .= '</li>';
+ 
 }
 if($hasWrap){
 	$html .= '</ul>';	
