--- a/app/design/frontend/codazon_fastest/default/template/catalog/product/view/type/default.phtml
+++ b/app/design/frontend/codazon_fastest/default/template/catalog/product/view/type/default.phtml
@@ -30,10 +30,17 @@
 
 <div class="product-shop-stock-avai">
 <?php if ($_product->isAvailable()): ?>
+
+	<?php 
+	$productType=$_product->getTypeID();
+    if($productType != 'configurable'): 
+    ?>
     
 	<p class="availability in-stock"><label><?php echo $this->__('Availability:') ?> </label><span><?php echo $this->__('In stock') ?></span>
 	<strong><?php echo $this->__('(') ?> <?= (int) Mage::getModel('cataloginventory/stock_item')->loadByProduct($_product)->getQty()?><?php echo $this->__(' Pcs)') ?></strong>
 	</p>
+	<?php endif; ?>
+	
 <?php else: ?>
     <p class="availability out-of-stock"><label><?php echo $this->__('Availability:') ?></label> <span><?php echo $this->__('Out of stock') ?></span></p>
 <?php endif; ?>
