--- a/app/design/frontend/codazon_fastest/default/template/configurableswatches/catalog/layer/filter/swatches.phtml
+++ b/app/design/frontend/codazon_fastest/default/template/configurableswatches/catalog/layer/filter/swatches.phtml
@@ -45,6 +45,9 @@ $_swatchOuterHeight = $_dimHelper->getOuterHeight(Mage_ConfigurableSwatches_Help
         $_label = $_item->getLabel();
         $_swatchUrl = Mage::helper('configurableswatches/productimg')->getGlobalSwatchUrl($_item, $_label, $_swatchInnerWidth, $_swatchInnerHeight);
         $_hasImage = (!empty($_swatchUrl));
+
+        $_hasImage = false; // sanjeev: to display only label instead of image
+
         $_linkClass = 'swatch-link' . (($_hasImage) ? ' has-image' : '');
         $_linkCss = 'height:' . $_swatchOuterHeight . 'px; ' . ((!$_hasImage) ? 'min-' : '') . 'width:' . $_swatchOuterWidth . 'px;';
         $_lineHeight = $_swatchOuterHeight + 2;
