--- a/app/design/frontend/codazon_fastest/default/template/checkout/onepage/payment/methods.phtml
+++ b/app/design/frontend/codazon_fastest/default/template/checkout/onepage/payment/methods.phtml
@@ -43,6 +43,7 @@
 <?php else:
     foreach ($methods as $_method):
         $_code = $_method->getCode();
+     echo $_code;
 ?>
     <dt id="dt_method_<?php echo $_code ?>">
     <?php if(!$oneMethod): ?>
