--- a/app/design/frontend/codazon_fastest/default/template/onestepcheckout/onepage/payment/methods.phtml
+++ b/app/design/frontend/codazon_fastest/default/template/onestepcheckout/onepage/payment/methods.phtml
@@ -2,7 +2,14 @@
 <p><?php echo $this->helper('checkout')->__('Sorry, no quotes are available for this order at this time.') ?></p>
 <?php else : ?>
 <dl class="sp-methods">
-<?php foreach ($this->getMethods() as $_method): $_code = $_method->getCode();  echo "Checking...".$_code; ?>
+<?php foreach ($this->getMethods() as $_method): $_code = $_method->getCode();  
+echo "Checking...".
+
+if($_code=='cashondelivery'){
+    $quote = Mage::getSingleton('checkout/cart')->getQuote();
+    echo $quote->getSubtotal();
+}
+ ?>
     <dt>
     <?php if( sizeof($this->getMethods()) > 1 ): ?>
         <input id="p_method_<?php echo $_code ?>" value="<?php echo $_code ?>" type="radio" name="payment[method]" title="<?php echo $this->htmlEscape($_method->getTitle()) ?>" onclick="payment.switchMethod('<?php echo $_code ?>')"<?php if($this->getSelectedMethodCode()==$_code): ?> checked="checked"<?php endif; ?> class="radio" />
