--- a/app/design/frontend/codazon_fastest/default/template/catalog/product/list/related.phtml
+++ b/app/design/frontend/codazon_fastest/default/template/catalog/product/list/related.phtml
@@ -94,9 +94,9 @@ switch($template){
                                         <button data-toggle="tooltip" data-original-title="<?php echo $this->__('Add to Cart') ?>" type="button" title="<?php echo Mage::helper('core')->quoteEscape($this->__('Add to Cart')) ?>" class="button btn-cart" onclick="setLocation('<?php echo $this->getAddToCartUrl($_product) ?>')"><span><span><?php echo $this->__('Add to Cart') ?></span></span></button>
                                     <?php endif ?>
                                     <?php if($_qsEnable) echo $_qsHelper->getQuickshopHtml($_product) ?>
-                                    <?php if($_compareUrl = $this->getAddToCompareUrl($_product)): ?>
+                                    <?php /* if($_compareUrl = $this->getAddToCompareUrl($_product)): ?>
                                     <a data-toggle="tooltip" data-original-title="<?php echo $this->__('Add to Compare') ?>" href="<?php echo $_compareUrl ?>" class="action link-compare"><?php echo $this->__('Add to Compare') ?></a>
-                                    <?php endif ?>
+                                    <?php endif */?>
                                 </div>
                             </div>
 						</div>
