--- a/app/design/frontend/codazon_fastest/default/template/catalog/product/view/type/default.phtml
+++ b/app/design/frontend/codazon_fastest/default/template/catalog/product/view/type/default.phtml
@@ -39,7 +39,7 @@
 	<strong><?php echo $this->__('(') ?> <?= (int) Mage::getModel('cataloginventory/stock_item')->loadByProduct($_product)->getQty()?><?php echo $this->__(' Pcs)') ?></strong>
 	<?php endif; ?>
 	</p>
-	
+	<p class="additional-gst">(Additional GST will be charged at checkout.)</p>
 	
 <?php else: ?>
     <p class="availability out-of-stock"><label><?php echo $this->__('Availability:') ?></label> <span><?php echo $this->__('Out of stock') ?></span></p>
