--- a/skin/frontend/codazon_fastest/default/css/styles.css
+++ b/skin/frontend/codazon_fastest/default/css/styles.css
@@ -11332,6 +11332,9 @@ table colgroup, .data-table colgroup {
   float: left;
   margin: 0;
 }
+div#cdz-pc-stores p {
+    float: left;
+}
 .header .cdz-header-top .cdz-top-link {
   margin: 0;
   padding: 0;
