--- a/app/design/frontend/codazon_fastest/default/template/deal/deal.phtml
+++ b/app/design/frontend/codazon_fastest/default/template/deal/deal.phtml
@@ -2,7 +2,7 @@
 			$collection = Mage::getModel('deal/deal')->getCollection();
              foreach ($collection as $item) {?>		
 		
-				<?php  if($item->getStatus()=='1'){?>
+				<?php  if($item->getStatus()=='1' && $item->getStore()=='1'){?>
 					<div class="left">
 					<?php $imgpath=Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_MEDIA);
 					?>
@@ -12,14 +12,14 @@
 				   <?php }?>
 				    <div class="right">
 				<?php // echo $item->getStatus();
-				 if($item->getStatus()=='2'){?>
+				 if($item->getStatus()=='2' && $item->getStore()=='1'){?>
 					
 					<?php $imgpath=Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_MEDIA);
 					?>
 					<a href="<?php echo $item->getUrl();?>"><img style="margin-bottom: 10px;" src="<?php  echo $imgpath.$item->getFilename();?>"/></a>					
 					
 				   <?php }?>
-				<?php  if($item->getStatus()=='3'){?>			
+				<?php  if($item->getStatus()=='3' && $item->getStore()=='1'){?>			
 					<?php $imgpath=Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_MEDIA);
 					?>
 					<a href="<?php echo $item->getUrl();?>"><img style="margin-bottom: 10px;" src="<?php  echo $imgpath.$item->getFilename();?>"/></a>					
