--- a/skin/frontend/codazon_fastest/default/css/styles.css
+++ b/skin/frontend/codazon_fastest/default/css/styles.css
@@ -27193,6 +27193,8 @@ a.swatch-link:hover {
 .store-switcher.cdz-dropdown {
     display: none !important;
 }
-
+span.lang-name {
+    display: none;
+}
 
 
