--- a/app/design/frontend/codazon_fastest/default/template/deal/deal_us.phtml
+++ b/app/design/frontend/codazon_fastest/default/template/deal/deal_us.phtml
@@ -1,6 +1,9 @@
 <?php 
-$collection = Mage::getModel('deal/deal')->getCollection();
-foreach ($collection as $item) {?>		
+$collection = Mage::getModel('deal/deal')->getCollection(); ?>
+<div style="display:none">
+<?php echo "<pre>"; print_r($collection->getData());?>
+</div>
+<?php foreach ($collection as $item) {?>		
 
 	<?php  if(($item->getStatus()=='1') && ($item->getStore()=='1' || $item->getStore()=='2')){?>
 		<div class="left">
